--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     Quero <br>
                     ser cliente
                 </h1>
-                <button>Clique e mude sua estratégia</button>
+                <a href="http://wa.me/5531976093822" target="_blank">Clique e mude sua estratégia</a>
+        
             </div>
 
         </section>
@@ -53,8 +54,8 @@
                     Quero aplicar para consultoria individual
                 </h2>
                 <span>empresas e profissionais no digital</span><br>
-                <p>tosavegmarketingd@gmail.com</p>
-                <a href="mailto:tosavegmarketingd@gmail.com">Clique aqui</a>
+             
+                <a href="https://forms.gle/7SMqY3WtKDAN3xzX6" target="_blank">Clique aqui</a>
             </div>
 
         </section>
@@ -69,10 +70,10 @@
             <i>to</i>save
         </div>
         <div class="rede-social">
-            <a href=""><img src="src/img/icone ig.png" alt=""></a>
+            <a href="https://www.instagram.com/barbaracrystyna?igsh=MXV2Ymt4ZDAyNjhrOA%3D%3D&utm_source=qr" target="_blank"><img src="src/img/icone ig.png" alt=""></a>
             <a href=""><img src="src/img/icone youtube.png" alt=""></a>
-            <a href=""><img src="src/img/icone behance.png" alt=""></a>
-            <a href=""><img src="src/img/icone tiktok.png" alt=""></a>
+            <a href="https://www.behance.net/brbarasantos40" target="_blank"><img src="src/img/icone behance.png" alt=""></a>
+            <a href="https://www.tiktok.com/@barbaracristina1605?_t=ZM-8vAcgR8e8Zz&_r=1" target="_blank"><img src="src/img/icone tiktok.png" alt=""></a>
         </div>
     </footer>
 
