--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
             <a href="https://www.tiktok.com/@barbaracristina1605?_t=ZM-8vAcgR8e8Zz&_r=1" target="_blank"><img src="src/img/icone tiktok.png" alt=""></a>
         </div>
     </footer>
+    <script>
+        window.addEventListener('load', function(){
+            document.body.classList.add('mostrar')
+        })
+    </script>
 
 </body>
 
